Redirects working.  Also commented out code not currently being used and updated the main page to link to the Add Salvage tool.

--- a/main.html
+++ b/main.html
@@ -3,7 +3,6 @@
 </head>
 <body>
 	<h1>Main page</h1>
-	<a href="add.html">Add</a>
-	<a href="view.html">View</a>
+	<a href="addSalvage">Add Salvage</a>
 </body>
 </html>
