Added viewSalvage page to view salvage data.  Basics are working, but need to build a wrapper/new type to contain the counts of material salvaged from each item, along with salvage count.

--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 </head>
 <body>
 	<h1>Main page</h1>
-	<a href="addSalvage">Add Salvage</a>
+	<a href="addSalvage">Add Salvage</a><br />
+	<a href="viewSalvage">View Salvage</a>
 </body>
 </html>
