--- a/viewSalvage.html
+++ b/viewSalvage.html
@@ -1,5 +1,8 @@
 <html>
 <head>
+	<script type="text/javascript">
+		var materials = eval({{.Materials}});
+	</script>
 </head>
 <body>
 	<table border="1">
