Added embedded frame to GW2Spidy to easier searching of new salvage to add.

--- a/addSalvage.html
+++ b/addSalvage.html
@@ -9,5 +9,6 @@
 		<select name='material2'><option value='' selected='true'>None</option>{{range .Materials}}<option value='{{.DataID}}'>{{.Name}}: {{.DataID}}</option>{{end}}</select> <input type='text' name='material2Count' /><br />
 		<input type='submit' /><br />
 	</form>
+	<iframe src="http://gw2spidy.com" align="middle" frameborder="1" height="100%" scrolling="auto" width="100%" ></iframe>
 </body>
 </html>
