Got my JSON objects being evaulated correctly with maps instead of arrays so the webpage can do more.

--- a/viewSalvage.html
+++ b/viewSalvage.html
@@ -1,7 +1,8 @@
 <html>
 <head>
 	<script type="text/javascript">
-		var materials = eval({{.Materials}});
+		var materials = JSON.parse({{.MaterialJSON}});
+		var items = JSON.parse({{.ItemJSON}});
 	</script>
 </head>
 <body>
